modal in register

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -72,10 +72,10 @@
     </div>
 </div>
 
-<div id="redirectToSignIn" class="modal-bg center">
+<div id="redirectToSignIn" class="modal-bg center hide">
     <div class="box-modal center">
         <p (click)="hide()" class="plus">+</p>
-        <p>¡Felicidades, {{ Apellido }} <br> ahora inicia sesión<br> con tus datos registrados<br> y
+        <p>¡Felicidades, {{ titularApellido }} <br> ahora inicia sesión<br> con tus datos registrados<br> y
             diviertete
             ahorrando!</p>
         <div class="center ">
